crawl (2:0.6.0~a2-1) unstable; urgency=low

  * New upstream git release.

 -- Adam Borowski <kilobyte@angband.pl>  Thu, 18 Feb 2010 17:49:32 +0100

crawl (2:0.6.0~a1-1286-g1c5c56c-1) unstable; urgency=low

  * Allow clean building from git.

 -- Adam Borowski <kilobyte@angband.pl>  Wed, 02 Dec 2009 13:49:46 +0100

crawl (2:0.6.0~a1-1261-g8343625-1) unstable; urgency=low

  * New upstream git release.
  * Totally redone packaging.
  * Added tiles build, the packages are now crawl (console), crawl-tiles
    and crawl-common.

 -- Adam Borowski <kilobyte@angband.pl>  Tue, 01 Dec 2009 14:25:06 +0100

crawl (2:0.4.4-1) unstable; urgency=low

  * New upstream release. Closes: #509209
    - Fixes speed of skill training. Closes: #508127
  * Add missing documentation to /usr/share/doc/crawl/. Closes: #509206
  * Apply patch from Martin Michlmayr fixing compilation with GCC 4.4.
    Closes: #505692
  * Do not try to autodetect UTF-8 support based on locale information,
    just assume it will work on a Debian system. Closes: #467255

 -- Guus Sliepen <guus@debian.org>  Mon, 29 Dec 2008 17:17:45 +0100

crawl (2:0.4.1-1) unstable; urgency=low

  * New upstream release.

 -- Guus Sliepen <guus@debian.org>  Mon, 21 Jul 2008 12:27:12 +0200

crawl (2:0.3.4-1) unstable; urgency=low

  * New upstream release.

 -- Guus Sliepen <guus@debian.org>  Tue, 05 Feb 2008 14:28:44 +0100

crawl (2:0.3.3-2) unstable; urgency=low

  * Move documentation to /usr/share/games/crawl/ so the in-game help system
    can find it. Closes: #455480
  * Fix build failure with GCC 4.3. Closes: #456088

 -- Guus Sliepen <guus@debian.org>  Sat, 15 Dec 2007 00:06:00 +0100

crawl (2:0.3.3-1) unstable; urgency=low

  * New upstream release.

 -- Guus Sliepen <guus@debian.org>  Fri, 07 Dec 2007 17:18:04 +0100

crawl (2:0.3.2-1) unstable; urgency=low

  * New upstream release.
  * Enable Unicode support. Closes: #451028
  * Use nl_langinfo() to detect Unicode support.
