@@ -37,7 +37,7 @@ Description: Dungeon Crawl, a text-based roguelike game
 
 Package: crawl-tiles
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, crawl-common
+Depends: ${shlibs:Depends}, ${misc:Depends}, crawl-common, ttf-dejavu
 Description: Dungeon Crawl, a roguelike game, tiles version
  Crawl is a fun game in the grand tradition of games like Rogue, Hack, and
  Moria. Your objective is to travel deep into a subterranean cave complex and
